k8s/api-commandes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-commandes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-commandes
  template:
    metadata:
      labels:
        app: api-commandes
    spec:
      containers:
        - name: api-commandes
          image: gestion-commandes-image:latest
          imagePullPolicy: Never # Remplace par ton vrai nom Docker Hub
          ports:
            - containerPort: 3001
