k8s/api-commandes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-commandes-service
spec:
  selector:
    app: api-commandes
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
