k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: produits.local
      http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 3000
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: api-commandes-service
                port:
                  number: 3001
